# claude-config-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLM_HANDOVER.md  Makefile  QUICK_START_GUIDE.md  README.md  clippy.toml  rustfmt.toml
.backups/: config_20260119_180202.284.json  config_20260119_180223.919.json  config_20260119_180232.238.json  config_20260119_180348.400.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
agent-work-report-document/: environment-check-report.md  work-report.md
completions/: ccm.bash  ccm.ps1  ccm.zsh
crates/cli/: Cargo.toml
crates/cli/src/: key_path.rs  main.rs
crates/cli/src/commands/: config.rs  history.rs  mcp.rs  mod.rs  project.rs  search.rs
crates/cli/src/output/: json.rs  mod.rs  table.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  import_export.rs  lib.rs  paths.rs  search.rs  types.rs
crates/core/src/backup/: mod.rs
crates/core/src/config/: manager.rs  merge.rs  mod.rs  validation.rs
crates/core/src/mcp/: manager.rs  mod.rs
crates/core/src/project/: mod.rs
crates/core/tests/: atomic_write_integration.rs  backup_integration.rs  benchmarks.rs  config_manager_integration.rs  error_message_quality.rs  error_messages.rs  file_io_integration.rs  merge_integration.rs  path_integration.rs  validation_integration.rs
crates/tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/tauri/src/: lib.rs  main.rs
crates/tauri/src/commands/: config.rs  mcp.rs  mod.rs  project.rs  search.rs  types.rs
docs/: PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md
docs/handoff/: CONTEXT_HANDOVER_PROMPT.md  HANDOFF_PROMPT.md  HANDOVER_PROMPT.md  IMPLEMENTATION_PROGRESS.md  LINUX_ENVIRONMENT_SETUP.md  PROJECT_STATUS.md
docs/reports/: GUI_HANDOVER_SUMMARY.md  GUI_IMPLEMENTATION_REPORT.md  MERGE_COMPLETE_REPORT.md  PHASE2_COMPLETE_REPORT.md  PHASE2_FINAL_REPORT.md  PHASE2_PROGRESS.md  PHASE4_5_PROGRESS_REPORT.md  PHASE6_COMPLETION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_PROGRESS_REPORT.md  TESTING_OPTIMIZATION_REPORT.md  WORK_SUMMARY_REPORT.md
scripts/: build.ps1  build.sh
specs/001-initial-implementation/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-initial-implementation/contracts/: claude-config-spec.md
test_project/.claude/: config.json
test_project/.claude/backups/: config_20260119_171857.180.json
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src-tauri/src/commands/: config.rs  history.rs  mcp.rs  project.rs  search.rs  types.rs  utils.rs
