[workspace]
members = [
    "crates/core",
    "crates/cli",
    # "crates/tauri",  # TODO: Re-enable when starting GUI implementation (Phase 3+)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Config Manager Contributors"]
license = "MIT"
repository = "https://github.com/unnode001/claude-config-manager"
rust-version = "1.75.0"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path handling
dirs = "5.0"
camino = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
rstest = "0.21"

# Async runtime (for Tauri)
tokio = { version = "1.38", features = ["full"] }

# Tauri
tauri = { version = "2.0", features = [] }
